# awsa

./: .gitignore  README.md  pyproject.toml
notebooks/: awsa.ipynb
src/: app.py  llm.py  main.py  query.py  search.py
test/: test_llm.py  test_query.py  test_search.py
test/data/: doc_1.html  doc_2.html  doc_3.html  query.yaml
