[tool.poetry]
name = "awsa"
version = "0.1.0"
description = ""
authors = ["Pratuat Amatya <pratuat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
aiohttp = "^3.9.5"
googlesearch-python = "^1.2.4"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
aiofiles = "^23.2.1"
unstructured = "^0.13.6"
streamlit = "^1.34.0"
yahoo-search-py = "^0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
